# Collomatique

./: .env  .gitignore  Cargo.toml  README.md  cbc.nix  collomatique.nix  default.nix  flake.nix
binding-colloscopes/: Cargo.toml
binding-colloscopes/src/: convert.rs  lib.rs  objects.rs  scripts.rs  tools.rs  vars.rs  views.rs
binding-colloscopes/src/scripts/: collomatique.collo-ml  collomatique_group_count_per_group_list.collo-ml  collomatique_group_count_per_interrogation.collo-ml  collomatique_groups_filled_by_ascending_order.collo-ml  collomatique_incompats.collo-ml  collomatique_interrogation_cost.collo-ml  collomatique_limits.collo-ml  collomatique_one_interrogation_at_once.collo-ml  collomatique_sealed_groups.collo-ml  collomatique_students_have_groups.collo-ml  collomatique_students_per_group.collo-ml  collomatique_students_per_group_for_subject.collo-ml  collomatique_vars.collo-ml  constraints.rs  group_count_per_interrogation.collo-ml  main.collo-ml  reifications.rs  single-module.collo-ml  tests.rs
collo-ml/: Cargo.toml
collo-ml/src/: ast.rs  collo-ml.pest  eval.rs  lib.rs  parser.rs  problem.rs  semantics.rs  traits.rs
collo-ml/src/ast/: docstring.rs  error.rs  expr.rs  from_pest.rs  span.rs  tests.rs  types.rs
collo-ml/src/eval/: checked_ast.rs  history.rs  local_env.rs  tests.rs  values.rs  variables.rs
collo-ml/src/parser/: tests.rs
collo-ml/src/problem/: builder.rs  scripts.rs  solution.rs  tests.rs  types.rs
collo-ml/src/semantics/: errors.rs  expr_checking.rs  global_env.rs  local_env.rs  module_processing.rs  path_resolution.rs  string_case.rs  tests.rs  types.rs
collo-ml/src/traits/: errors.rs  eval_object.rs  eval_var.rs  field_types.rs  view.rs
collo-ml/tests/: eval_object_basic_tests.rs  eval_object_cache_tests.rs  eval_object_collections_tests.rs  eval_object_custom_names_tests.rs  eval_object_option_tests.Rs  eval_object_option_tests.rs  eval_object_pretty_print_tests.rs  eval_var_dynamic_tests.rs  eval_var_edge_cases.rs  eval_var_options_tests.rs  eval_var_simple.rs  view_object_tests.rs
collomatique-ilp/: Cargo.toml
collomatique-ilp/src/: lib.rs  linexpr.rs  mat_repr.rs  solvers.rs
collomatique-ilp/src/linexpr/: tests.rs
collomatique-ilp/src/mat_repr/: nd.rs  sparse.rs
collomatique-ilp/src/solvers/: coin_cbc.rs  good_lp.rs
collomatique-ilp/src/tests/: config_data.rs
core/: Cargo.toml
core/src/: colloscopes.rs  colloscopes_draft.rs  constraints.rs  examples.rs  generics.rs  history.rs  ids.rs  lib.rs  ops.rs  python.rs  rpc.rs  solver.rs  state.rs  time.rs  traits.rs
core/src/colloscopes/: ops.rs  structs.rs  time.rs
core/src/constraints/: main.rs
core/src/examples/: simple_schedule.rs
core/src/ops/: assignments.rs  colloscopes.rs  general_planning.rs  group_lists.rs  history.rs  incompatibilities.rs  rules.rs  settings.rs  slots.rs  students.rs  subjects.rs  teachers.rs  week_patterns.rs
core/src/python/: glue.rs
core/src/rpc/: cmd_msg.rs  error_msg.rs  gui_answer.rs
core/src/solver/: colloscopes.rs
core/src/time/: tests.rs
core/tests/: simple_schedule.rs  subjects_correctly_updated_for_periods.rs
gtk4/: Cargo.toml
gtk4/src/: dialogs.rs  editor.rs  lib.rs  loading.rs  main.rs  tools.rs  welcome.rs  widgets.rs
gtk4/src/dialogs/: file_caveats.rs  file_error.rs  open_save.rs  warning_changed.rs
gtk4/src/editor/: assignments.rs  check_script.rs  colloscope.rs  error_dialog.rs  general_planning.rs  group_lists.rs  incompats.rs  main_script.rs  run_script.rs  run_second_instance.rs  settings.rs  slots.rs  students.rs  subjects.rs  teachers.rs  warning_op.rs  week_patterns.rs
gtk4/src/loading/: file_loader.rs
gtk4/src/tools/: dynamic_column_view.rs  factories.rs  open_save.rs
gtk4/src/widgets/: contact_list.rs  droplist.rs  rpc_server.rs
ilp/: Cargo.toml
ilp/src/: lib.rs  linexpr.rs  objectives.rs  solvers.rs  tests.rs
ilp/src/linexpr/: tests.rs
ilp/src/solvers/: coin_cbc.rs  good_lp.rs
ilp/src/tests/: config_data.rs
ops/: Cargo.toml
ops/src/: assignments.rs  colloscope.rs  colloscopes.rs  general_planning.rs  group_lists.rs  incompatibilities.rs  lib.rs  main_script.rs  rules.rs  settings.rs  slots.rs  students.rs  subjects.rs  teachers.rs  week_patterns.rs
python/: Cargo.toml
python/src/: glue.rs  lib.rs
python/src/glue/: colloscopes.rs  common.rs  general_planning.rs  group_lists.rs  incompatibilities.rs  params.rs  rules.rs  settings.rs  slots.rs  students.rs  subjects.rs  teachers.rs  time.rs  week_patterns.rs
rpc/: Cargo.toml
rpc-engine/: Cargo.toml
rpc-engine/src/: lib.rs
rpc/src/: cmd_msg.rs  gui_answer.rs  lib.rs
rpc/src/cmd_msg/: open_file_dialog.rs
rpc/src/gui_answer/: open_file_dialog.rs
solver-colloscopes/: Cargo.toml
solver-colloscopes/src/: base.rs  constraints.rs  lib.rs
solver-colloscopes/src/base/: solution.rs  variables.rs
solver-colloscopes/src/constraints/: group_count.rs  groups_per_slots.rs  incompat_for_single_week.rs  main.rs  one_interrogation_at_a_time.rs  sealed_groups.rs  strict_limits.rs  students_per_groups.rs  students_per_groups_for_subject.rs
solver-glue/: Cargo.toml
solver-glue/src/: colloscopes.rs  lib.rs
state-colloscopes/: Cargo.toml
state-colloscopes/src/: assignments.rs  colloscope_params.rs  colloscopes.rs  group_lists.rs  ids.rs  incompats.rs  lib.rs  ops.rs  periods.rs  rules.rs  settings.rs  slots.rs  students.rs  subjects.rs  teachers.rs  week_patterns.rs
state-colloscopes/tests/: period_consistency_in_subjects.rs
storage/: Cargo.toml
storage/src/: decode.rs  encode.rs  json.rs  lib.rs
storage/src/decode/: assignment_map.rs  group_list_list.rs  incompat_list.rs  inner_data_dump.rs  period_list.rs  rule_list.rs  settings.rs  slot_list.rs  student_list.rs  subject_list.rs  teacher_list.rs  week_pattern_list.rs
storage/src/json/: assignment_map.rs  common.rs  group_list_list.rs  incompat_list.rs  period_list.rs  rule_list.rs  settings.rs  slot_list.rs  student_list.rs  subject_list.rs  (+2 more)
storage/tests/: general_entries_check.rs  header_check.rs  simple_empty_colloscope.rs  simple_student_list.rs
(+447 files in other folders)
