[workspace]
resolver = "2"
members = [ "gtk4", "state", "ilp", "solver", "solver-colloscopes", "time" , "storage", "state-colloscopes"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christoph Charles"]

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
serde_with = "3.13"
thiserror = "1.0"
tokio = "1.45"
clap = "4.5"
ordered-float = "4.2"
chrono = "0.4"
non-empty-string = "0.2.6"