[package]
name = "collomatique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6" }
rand = "0.8"
thiserror = "1.0.58"
ordered-float = "4.2.0"
clap = { version = "4.4.18", features = ["derive"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite" ] }
futures = "0.3"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros" ] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sprs = "0.11"
rayon = "1.10"
coin_cbc = { version = "0.1.8", default-features = false }
highs = "1.6"
trait-variant = "0.1.2"
gag = "1.0.0"
indicatif = "0.17.8"
num_cpus = "1.0"
shlex = "1.3.0"
clap-repl = "0.2.0"
reedline = "0.32.0"

[features]
