[workspace]
resolver = "2"
members = [ "gtk4", "state", "ilp", "solver", "solver-colloscopes", "solver-groups", "time" , "storage", "state-colloscopes" , "python", "ops", "rpc", "rpc-engine", "solver-glue", "collo-ml", "collo-ml-derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christoph Charles"]

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.13"
thiserror = "1.0"
tokio = "1.45"
clap = "4.5"
ordered-float = "4.2"
chrono = "0.4"
non-empty-string = "0.2.6"
