[package]
name = "collo-ml"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pest.workspace = true
pest_derive = "2.8"
thiserror.workspace = true
collomatique-ilp = { path = "../ilp" }
regex = "*"
collo-ml-derive = { path = "../collo-ml-derive" }
sha2 = "0.10"
base64 = "0.22"
lazy_static = "*"
derivative = "*"