[package]
name = "collomatique-ilp"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
thiserror = "1.0.58"
ndarray = { version = "0.15.6" }
sprs = "0.11"
coin_cbc = { version = "0.1.8", optional = true }
gag = { version = "1.0.0", optional = true }

[features]
default = ["coin_cbc"]
coin_cbc = ["dep:coin_cbc","dep:gag"]
