[package]
name = "collomatique-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
collomatique-time = { path = "../time" }
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
pyo3 = "0.25"
anyhow.workspace = true