[package]
name = "collomatique-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
collomatique-time = { path = "../time" }
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
collomatique-storage = { path = "../storage" }
pyo3 = "0.25"
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
non-empty-string.workspace = true