[package]
name = "collomatique-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
collomatique-time = { path = "../time" }
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
collomatique-solver = { path = "../solver" }
collomatique-solver-colloscopes = { path = "../solver-colloscopes" }
collomatique-ilp = { path = "../ilp" }
pyo3 = { version = "0.25", features = [ "py-clone" ] }
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
non-empty-string.workspace = true