[package]
name = "collomatique-gtk4"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
collomatique-storage = { path = "../storage" }
collomatique-time = { path = "../time" }
libadwaita = { version = "0.7", features = [ "v1_7" ] }
relm4 = { version = "0.9", features = [ "libadwaita" ] }
ashpd = "0.11.0"
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
chrono.workspace = true
