[package]
name = "collomatique-gtk4"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
collomatique-storage = { path = "../storage" }
collomatique-time = { path = "../time" }
collomatique-python = { path = "../python" }
collomatique-rpc = { path = "../rpc" }
libadwaita = { version = "0.7", features = [ "v1_7" ] }
relm4 = { version = "0.9", features = [ "libadwaita" ] }
rustix = { version = "1.0", features = [ "pty" ] }
rfd = { version = "0.15", default-features = false, features = [ "xdg-portal", "tokio" ] }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "process"] }
chrono.workspace = true
anyhow.workspace = true