[package]
name = "collomatique-ilp"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
thiserror = "1.0"
ndarray = { version = "0.15.6" }
sprs = "0.11"
coin_cbc = { version = "0.1.8", optional = true }
gag = { version = "1.0.0", optional = true }
good_lp = { version = "1.13.0", features = ["lp-solvers"], optional = true }

[features]
default = ["coin_cbc","good_lp"]
coin_cbc = ["dep:coin_cbc","dep:gag"]
good_lp = ["dep:good_lp"]
