[package]
name = "collomatique-ilp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ordered-float.workspace = true
thiserror.workspace = true
ndarray = { version = "0.15.6" }
sprs = "0.11"
coin_cbc = { version = "0.1.8", optional = true }
gag = { version = "1.0.0", optional = true }
good_lp = { version = "1.13.0", features = ["lp-solvers"], optional = true }

[features]
default = ["coin_cbc","good_lp"]
coin_cbc = ["dep:coin_cbc","dep:gag"]
good_lp = ["dep:good_lp"]
