[package]
name = "collomatique-rpc-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
collomatique-rpc = { path = "../rpc" }
collomatique-python = { path = "../python" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
collomatique-binding-colloscopes = { path = "../binding-colloscopes" }
collomatique-ilp = { path = "../ilp" }
collomatique-ops = { path = "../ops" }
anyhow.workspace = true
