[package]
name = "collomatique-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
collomatique-state-colloscopes = { path = "../state-colloscopes" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = { version = "1.45.1", features = [ "fs" ] }
