[package]
name = "collomatique-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
collomatique-state = { path = "../state" }
collomatique-state-colloscopes = { path = "../state-colloscopes" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true , features = [ "fs" ] }
